[package]
name = "marge"
description = "marge create MRs/PRs and automatically assigns one of your merge buddies"
version = "0.1.0"
authors = ["Ryan Riginding <ryan@riginding.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.15"
reqwest = "0.9.12"
rand = "0.6.5"
serde_json = "1.0.39"
dialoguer = "0.3.0"
indicatif = "0.11.0"
git2 = "0.8.0"
