[package]
name = "marge"
description = "marge create MRs and automatically assigns one of your merge buddies"
version = "0.1.0"
authors = ["Ryan Riginding <ryan@riginding.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
dialoguer = "0.4.0"
git2 = "0.8.0"
indicatif = "0.11.0"
rand = "0.6.5"
reqwest = "0.9.12"
structopt = "0.2.15"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
serde_yaml = "0.8.9"
url = "2.1.0"
